# testpybinding

./: CMakeLists.txt
include/: bdt.h  dacsource.h  drvwrapper.h  potdr.h  potdraccumulatorcore.h  potdrfanctrl.h  potdrlaserctrl.h  potdrpowermeter.h  potdrsequencercore.h  potdrspi.h  potdrtimebase.h  register.h
py/: bindings.cpp
src/: .potdraccumulatorcore.h.kate-swp  bdt.cpp  drvwrapper.cpp  potdr.cpp  potdraccumulatorcore.cpp  potdrdacsource.cpp  potdrfanctrl.cpp  potdrlaserctrl.cpp  potdrpowermeter.cpp  potdrsequencercore.cpp  potdrspi.cpp  potdrtimebase.cpp  register.cpp
test/: basic.cpp
